[package]
name = "one_collect_cli"
description = "Collect a system-wide performance trace."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["cargo"] }
one_collect = { path = "../one_collect" }