[package]
name = "one_collect"
description = "Collect a system-wide performance trace."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
twox-hash = "1.6.3"
# 3.5.0 cannot build
protobuf = "3.4.*"
flate2 = "1.0.31"
ruwind = { path = "../ruwind" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.153"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "event"
harness = false

[[bench]]
name = "intern"
harness = false

[[bench]]
name = "export"
harness = false
