[package]
name = "one_collect"
description = "Collect a system-wide performance trace."
version = "0.0.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["scripting"]
scripting = []

[dependencies]
anyhow = "1.0.75"
twox-hash = "1.6.3"
# 3.5.0 cannot build
protobuf = "3.7.*"
flate2 = "1.0.31"
ruwind = { path = "../ruwind" }
chrono = "0.4.39"
rhai = "1.21.0"

[target.'cfg(target_os = "windows")'.dependencies]
rust-crypto = "0.2.36"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.153"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "event"
harness = false

[[bench]]
name = "intern"
harness = false

[[bench]]
name = "export"
harness = false
