[package]
name = "record-trace"
description = "Record a trace using one-collect."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["cargo", "derive"] }
ctrlc = "3.2"
one_collect = { path = "../one_collect" }
